# gl-engine

./: CMakeLists.txt  README.md  gl-check-error.cpp  main.cpp  sourceFiles.cmake  vcpkg.json
apis/base/: ieditor-view-renderer.cpp  ieditor-view-renderer.hpp  iengine.cpp  iengine.hpp  iinput.cpp  iinput.hpp  irender-object.cpp  irender-object.hpp  irenderer.cpp  irenderer.hpp  iresource-manager.hpp  iwindow.cpp  iwindow.hpp
apis/opengl/: deferred-renderer.cpp  deferred-renderer.hpp  editor-view-renderer.cpp  editor-view-renderer.hpp  engine.cpp  engine.hpp  gl-check-error.cpp  gl-check-error.hpp  gl-engine.cpp  gl-engine.hpp  include.hpp  input.cpp  input.hpp  loader.cpp  loader.hpp  render-object.cpp  render-object.hpp  renderer.cpp  renderer.hpp  resource-manager.cpp  resource-manager.hpp  shader.cpp  shader.hpp  window.cpp  window.hpp
apis/opengl/shaders/: cubic-fragment.frag  cubic-tess-control.tesc  cubic-tess-eval.tese  cubic-vertex.vert  depth-fragment.frag  depth-vertex.vert  fragment.frag  screen-fragment.frag  screen-vertex.vert  simple-fragment.frag  skybox-fragment.frag  skybox-vertex.vert  terrain-fragment.frag  terrain-tess-control.tesc  terrain-tess-eval.tese  terrain-vertex.vert  vertex.vert
apis/opengl/shaders/deferred/: blinn-phong-lighting.frag  cubic-patch.tese  fragment.frag  frostbite-pbr.frag  lighting.frag  lighting.vert  mesh.frag  mesh.vert  pbr-direct-light.frag  pbr-point-light.frag  pbr.frag  screen-fragment.frag  screen.frag  skybox.vert  vertex.vert
apis/opengl/shaders/editor/: mesh.frag  mesh.vert
apis/opengl/shaders/forward/: cascade-depth.geom  cascade-depth.vert  cubic-tess-control.tesc  depth-fragment.frag  depth-vertex.vert  gooch-fragment.frag  parallax.frag  parallax.vert  screen-fragment.frag  screen-vertex.vert  terrain-fragment.frag  terrain-vertex.vert
core/: editor.cpp  editor.hpp  game-object.cpp  game-object.hpp  hierarchy.cpp  hierarchy.hpp  igame-events-listener.cpp  igame-events-listener.hpp  imesh.hpp  include.hpp  loader.cpp  loader.hpp  physics-engine.cpp  physics-engine.hpp  scene.cpp  scene.hpp
core/components/: camera.cpp  camera.hpp  component.cpp  component.hpp  components-manager.cpp  components-manager.hpp  cubic-patch.hpp  mesh.cpp  mesh.hpp  terrain.cpp  terrain.hpp  transform.cpp  transform.hpp
core/components/colliders/: box-collider.cpp  box-collider.hpp  collider.cpp  collider.hpp  sphere-collider.cpp  sphere-collider.hpp
core/components/lights/: direct-light.cpp  direct-light.hpp  light.cpp  light.hpp  point-light.cpp  point-light.hpp
core/game-object/: game-object.cpp  game-object.hpp  hierarchy.cpp  include.hpp
core/game-object/components/: camera.cpp  camera.hpp  component.hpp  cubic-patch.cpp  cubic-patch.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  terrain.cpp  terrain.hpp  transform.cpp  transform.hpp
core/game-object/components/lights/: light.cpp  point-light.cpp  point-light.hpp  spot-light.cpp  spot-light.hpp
core/loader/: loader.cpp  loader.hpp  material-info.cpp  material-info.hpp  model-parser.cpp  model-parser.hpp
core/structures/: material.cpp  material.hpp  texture-options.cpp  texture-options.hpp  texture.cpp  texture.hpp  vectors.cpp  vectors.hpp
demos/: backpack-demo.cpp  backpack-demo.hpp  collision-demo.cpp  collision-demo.hpp  fps-demo.cpp  fps-demo.hpp  gooch-shading-demo.cpp  gooch-shading-demo.hpp  many-light-demo.cpp  many-light-demo.hpp  parallax-demo.cpp  parallax-demo.hpp  tunnel-demo.cpp  tunnel-demo.hpp
dependencies/assimp_5.3.1/: INSTALL_RECEIPT.json
dependencies/assimp_5.3.1/.brew/: assimp.rb
dependencies/assimp_5.3.1/lib/: libassimp.5.dylib
dependencies/assimp_5.3.1/lib/cmake/assimp-5.3/: assimpTargets-release.cmake  assimpTargets.cmake
dependencies/assimp_5.3.1/lib/pkgconfig/: assimp.pc
dependencies/glfw_3.3.9/: INSTALL_RECEIPT.json
dependencies/glfw_3.3.9/.brew/: glfw.rb
dependencies/glfw_3.3.9/lib/: libglfw.3.3.dylib
dependencies/glfw_3.3.9/lib/cmake/glfw3/: glfw3ConfigVersion.cmake  glfw3Targets-release.cmake  glfw3Targets.cmake
dependencies/glfw_3.3.9/lib/pkgconfig/: glfw3.pc
dependencies/headers/: stb_image.h
engine/: include.hpp  input.cpp  renderer.cpp  renderer.hpp
game-object/: game-object.cpp  hierarchy.hpp
game-object/components/: camera.cpp  component.cpp  component.hpp  material.cpp  mesh.cpp  mesh.hpp  transform.hpp
game-object/components/lights/: direct-light.cpp  direct-light.hpp  light.hpp  point-light.hpp
resources/models/backpack/: backpack.mtl
resources/shaders/: fragment.frag  simple-vertex.vert
